--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ vector.httpLogLevel=NONE
 
 # Maven publication
 # Ref: https://github.com/vanniktech/gradle-maven-publish-plugin
-GROUP=com.github.developers-mylermedia
+GROUP=org.matrix.android
 POM_ARTIFACT_ID=matrix-android-sdk2
 VERSION_NAME=1.5.26
 
@@ -33,15 +33,15 @@ POM_PACKAGING=aar
 POM_NAME=Matrix Android SDK 2
 POM_DESCRIPTION=An Android SDK to connect to a Matrix homeserver.
 POM_INCEPTION_YEAR=2021
-POM_URL=https://github.com/developers-mylermedia/matrix-android-sdk2
+POM_URL=https://github.com/matrix-org/matrix-android-sdk2
 
 POM_LICENSE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 
-POM_SCM_URL=https://github.com/developers-mylermedia/matrix-android-sdk2
-POM_SCM_CONNECTION=scm:git:git://github.com/developers-mylermedia/matrix-android-sdk2.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/developers-mylermedia/matrix-android-sdk2.git
+POM_SCM_URL=https://github.com/matrix-org/matrix-android-sdk2
+POM_SCM_CONNECTION=scm:git:git://github.com/matrix-org/matrix-android-sdk2.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/matrix-org/matrix-android-sdk2.git
 
 POM_DEVELOPER_ID=matrixdev
 POM_DEVELOPER_NAME=matrixdev
