changed maven publishing code

--- a/matrix-sdk-android/build.gradle
+++ b/matrix-sdk-android/build.gradle
@@ -4,8 +4,9 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'realm-android'
 apply plugin: "org.jetbrains.dokka"
+apply plugin: 'maven-publish'
 // WARNING: always restore this line after importing code from Element Android (1/2)
-apply plugin: "com.vanniktech.maven.publish"
+//apply plugin: "com.vanniktech.maven.publish"
 
 if (project.hasProperty("coverage")) {
     apply plugin: 'jacoco'
@@ -232,4 +233,14 @@ dependencies {
     androidTestImplementation libs.tests.timberJunitRule
 
     androidTestUtil libs.androidx.orchestrator
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'org.matrix.android'
+            artifactId = 'matrix-android-sdk2'
+            version = '1.5.33'
+        }
+    }
 }
